# TC036: Side Menu Health Records as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC036 - Side Menu Health Records Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Health/HealthScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- assertVisible: ${output.menu_screen.healthRecordsLnk}
- tapOn: ${output.menu_screen.healthRecordsLnk}

- waitForAnimationToEnd
- assertVisible: ${output.health_health.healthTitle}
- assertVisible: ${output.health_health.unlockHealthExpLabel}
- tapOn: ${output.common_navigation.homeTab}
- waitForAnimationToEnd
