# TC037: Side Menu Help Center as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC037 - Side Menu Help Center Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
    - runScript: ../../screens/SearchAndNav/SNAPPScreen.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- swipe:
    direction: UP

- assertVisible: ${output.menu_screen.helpCenterLnk}
- tapOn: ${output.menu_screen.helpCenterLnk}

- waitForAnimationToEnd
- runFlow:
    when:
      visible: ${output.common_buttons.closeBtn}
    commands:
      - tapOn: ${output.common_buttons.closeBtn}
- assertVisible: ${output.snapp_navigation.helpCenterLabel}
- assertVisible: ${output.snapp_navigation.helpCenterPopularQuestionsTitle}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
