# TC038: Side Menu Terms and Privacy as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC038 - Side Menu Terms Privacy Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Account/AccountTermsScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- swipe:
    direction: UP

- assertVisible: ${output.menu_screen.termsAndPrivacyLnk}
- tapOn: ${output.menu_screen.termsAndPrivacyLnk}

- waitForAnimationToEnd
- assertVisible: ${output.account_terms.termsAndPrivacyNavBar}
- assertVisible: ${output.account_terms.termsOfUseLink}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
