# TC042: Side Menu Vaccinations as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC042 - Side Menu Vaccinations Signed In"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Health/MinuteClinicSchedulingScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
    - runScript:
        file: ../../config/credentials-loader.js
        env:
          loginData: DEAN_FANT
          BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- assertVisible: ${output.menu_screen.vaccinationsLnk}
- tapOn: ${output.menu_screen.vaccinationsLnk}

- waitForAnimationToEnd
- assertVisible: ${output.health_scheduling.patientVaccineLabel}
- assertVisible: ${output.health_scheduling.hiPatientVaccineLabel}
- assertVisible: ${output.common_buttons.backBtn}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
