# TC044: Side Menu Health Records as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC044 - Side Menu Health Records Signed In"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Health/HealthScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
    - runScript:
        file: ../../config/credentials-loader.js
        env:
          loginData: DEAN_FANT
          BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- swipe:
    start: 50%, 70%
    end: 50%, 40%
    speed: 1

- assertVisible: ${output.menu_screen.healthRecordsLnk}
- tapOn: ${output.menu_screen.healthRecordsLnk}

- waitForAnimationToEnd
- assertVisible: ${output.health_health.healthTitle}
- assertVisible: ${output.searchnav_secondary_tabs.recordsTab}
- assertVisible: ${output.common_buttons.backBtn}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
