# TC046: Side Menu Terms and Privacy as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC046 - Side Menu Terms Privacy Signed In"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Account/AccountTermsScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
    - runScript:
        file: ../../config/credentials-loader.js
        env:
          loginData: DEAN_FANT
          BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- swipe:
    direction: UP

- assertVisible: ${output.menu_screen.termsAndPrivacyLnk}
- tapOn: ${output.menu_screen.termsAndPrivacyLnk}

- waitForAnimationToEnd
- assertVisible: ${output.account_terms.termsAndPrivacyNavBar}
- assertVisible: ${output.account_terms.termsOfUseLink}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
